[package]
name = "keydungeon-api"
version = "0.1.0"
edition = "2024"
authors = ["nlxdodge"]

[dependencies]
axum = "0.8.6"
log = "0.4.28"
serde_json = "1.0.145"
uuid = "1.18.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
secrecy = { version = "0.10.3", features = ["serde"] }
