[package]
name = "keydungeon-api"
version = "0.1.0"
edition = "2024"
authors = ["nlxdodge"]

[dependencies]
axum = "0.8.6"
log = "0.4.28"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
secrecy = { version = "0.10.3", features = ["serde"] }
zeroize = { version = "1.8.2", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-async-std", "postgres", "macros", "uuid", "chrono"] }
uuid  = { version = "1.22.0", features = ["serde", "v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
postgres = { version = "0.19.12", features = ["with-serde_json-1"] }
